Builds/build_1/CactusLang/Grammar/CactusGrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:/BME/sem6/onlab/Builds/build_1/CactusLang/Grammar/CactusGrammar.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class CactusGrammarParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, INCLUDE_HEADER=5, ID=6, TYPE=7, PARAM=8, 
		BODY_OPN=9, BODY_CLS=10, SPRT=11, L_STRING=12, FILEPATH=13, TAG=14, CONST=15, 
		CONST_INT=16, CONST_INT_DEC=17, CONST_INT_HEX=18, CONST_FLOAT=19, CONST_STRING=20, 
		BIN_OP=21, UNARY_OP=22, LUNOP=23, RUNOP=24, VAL_OPERATOR=25, COMP_OPERATOR=26, 
		ASSIGN=27, OP_ASG=28, OP_ADD=29, OP_NEG=30, OP_STAR=31, OP_DIV=32, OP_AND=33, 
		OP_OR=34, OP_XOR=35, OP_LSH=36, OP_RSH=37, OP_EQL=38, OP_BAND=39, OP_BOR=40, 
		OP_NEQ=41, OP_NOT=42, OP_LST=43, OP_GRT=44, OP_ACC=45, OP_REF=46, WHITESPACE=47, 
		NEWLINE=48, COMMENT=49;
	public const int
		RULE_codefile = 0, RULE_glob_statement = 1, RULE_prepoc_statement = 2, 
		RULE_func_header = 3, RULE_func_dcl = 4, RULE_field_dcl = 5, RULE_struct_header = 6, 
		RULE_struct_dcl = 7, RULE_code_body = 8, RULE_statement = 9, RULE_var_name = 10, 
		RULE_var_dcl = 11, RULE_assign = 12, RULE_value = 13, RULE_func_call = 14, 
		RULE_expression = 15;
	public static readonly string[] ruleNames = {
		"codefile", "glob_statement", "prepoc_statement", "func_header", "func_dcl", 
		"field_dcl", "struct_header", "struct_dcl", "code_body", "statement", 
		"var_name", "var_dcl", "assign", "value", "func_call", "expression"
	};

	private static readonly string[] _LiteralNames = {
		null, "'('", "','", "')'", "'struct'", "'include'", null, null, null, 
		"'{'", "'}'", "';'", null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, "'='", "'+'", "'-'", "'*'", 
		null, "'&'", "'|'", "'^'", "'<<'", "'>>'", "'=='", "'&&'", "'||'", "'!='", 
		"'!'", "'<'", "'>'", "':'", "'.'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, "INCLUDE_HEADER", "ID", "TYPE", "PARAM", 
		"BODY_OPN", "BODY_CLS", "SPRT", "L_STRING", "FILEPATH", "TAG", "CONST", 
		"CONST_INT", "CONST_INT_DEC", "CONST_INT_HEX", "CONST_FLOAT", "CONST_STRING", 
		"BIN_OP", "UNARY_OP", "LUNOP", "RUNOP", "VAL_OPERATOR", "COMP_OPERATOR", 
		"ASSIGN", "OP_ASG", "OP_ADD", "OP_NEG", "OP_STAR", "OP_DIV", "OP_AND", 
		"OP_OR", "OP_XOR", "OP_LSH", "OP_RSH", "OP_EQL", "OP_BAND", "OP_BOR", 
		"OP_NEQ", "OP_NOT", "OP_LST", "OP_GRT", "OP_ACC", "OP_REF", "WHITESPACE", 
		"NEWLINE", "COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "CactusGrammar.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static CactusGrammarParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public CactusGrammarParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public CactusGrammarParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class CodefileContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(CactusGrammarParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Glob_statementContext[] glob_statement() {
			return GetRuleContexts<Glob_statementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Glob_statementContext glob_statement(int i) {
			return GetRuleContext<Glob_statementContext>(i);
		}
		public CodefileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_codefile; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICactusGrammarListener typedListener = listener as ICactusGrammarListener;
			if (typedListener != null) typedListener.EnterCodefile(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICactusGrammarListener typedListener = listener as ICactusGrammarListener;
			if (typedListener != null) typedListener.ExitCodefile(this);
		}
	}

	[RuleVersion(0)]
	public CodefileContext codefile() {
		CodefileContext _localctx = new CodefileContext(Context, State);
		EnterRule(_localctx, 0, RULE_codefile);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 35;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 16560L) != 0)) {
				{
				{
				State = 32;
				glob_statement();
				}
				}
				State = 37;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 38;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Glob_statementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Prepoc_statementContext prepoc_statement() {
			return GetRuleContext<Prepoc_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Func_dclContext func_dcl() {
			return GetRuleContext<Func_dclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Struct_dclContext struct_dcl() {
			return GetRuleContext<Struct_dclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Field_dclContext field_dcl() {
			return GetRuleContext<Field_dclContext>(0);
		}
		public Glob_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_glob_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICactusGrammarListener typedListener = listener as ICactusGrammarListener;
			if (typedListener != null) typedListener.EnterGlob_statement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICactusGrammarListener typedListener = listener as ICactusGrammarListener;
			if (typedListener != null) typedListener.ExitGlob_statement(this);
		}
	}

	[RuleVersion(0)]
	public Glob_statementContext glob_statement() {
		Glob_statementContext _localctx = new Glob_statementContext(Context, State);
		EnterRule(_localctx, 2, RULE_glob_statement);
		try {
			State = 44;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 40;
				prepoc_statement();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 41;
				func_dcl();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 42;
				struct_dcl();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 43;
				field_dcl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Prepoc_statementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INCLUDE_HEADER() { return GetToken(CactusGrammarParser.INCLUDE_HEADER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OP_LST() { return GetToken(CactusGrammarParser.OP_LST, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FILEPATH() { return GetToken(CactusGrammarParser.FILEPATH, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OP_GRT() { return GetToken(CactusGrammarParser.OP_GRT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SPRT() { return GetToken(CactusGrammarParser.SPRT, 0); }
		public Prepoc_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prepoc_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICactusGrammarListener typedListener = listener as ICactusGrammarListener;
			if (typedListener != null) typedListener.EnterPrepoc_statement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICactusGrammarListener typedListener = listener as ICactusGrammarListener;
			if (typedListener != null) typedListener.ExitPrepoc_statement(this);
		}
	}

	[RuleVersion(0)]
	public Prepoc_statementContext prepoc_statement() {
		Prepoc_statementContext _localctx = new Prepoc_statementContext(Context, State);
		EnterRule(_localctx, 4, RULE_prepoc_statement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 46;
			Match(INCLUDE_HEADER);
			State = 47;
			Match(OP_LST);
			State = 48;
			Match(FILEPATH);
			State = 49;
			Match(OP_GRT);
			State = 50;
			Match(SPRT);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Func_headerContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TYPE() { return GetToken(CactusGrammarParser.TYPE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(CactusGrammarParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] TAG() { return GetTokens(CactusGrammarParser.TAG); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TAG(int i) {
			return GetToken(CactusGrammarParser.TAG, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] PARAM() { return GetTokens(CactusGrammarParser.PARAM); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PARAM(int i) {
			return GetToken(CactusGrammarParser.PARAM, i);
		}
		public Func_headerContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_func_header; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICactusGrammarListener typedListener = listener as ICactusGrammarListener;
			if (typedListener != null) typedListener.EnterFunc_header(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICactusGrammarListener typedListener = listener as ICactusGrammarListener;
			if (typedListener != null) typedListener.ExitFunc_header(this);
		}
	}

	[RuleVersion(0)]
	public Func_headerContext func_header() {
		Func_headerContext _localctx = new Func_headerContext(Context, State);
		EnterRule(_localctx, 6, RULE_func_header);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 55;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==TAG) {
				{
				{
				State = 52;
				Match(TAG);
				}
				}
				State = 57;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 58;
			Match(TYPE);
			State = 59;
			Match(ID);
			State = 60;
			Match(T__0);
			State = 69;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==PARAM) {
				{
				State = 61;
				Match(PARAM);
				State = 66;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==T__1) {
					{
					{
					State = 62;
					Match(T__1);
					State = 63;
					Match(PARAM);
					}
					}
					State = 68;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
			}

			State = 71;
			Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Func_dclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Func_headerContext func_header() {
			return GetRuleContext<Func_headerContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Code_bodyContext code_body() {
			return GetRuleContext<Code_bodyContext>(0);
		}
		public Func_dclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_func_dcl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICactusGrammarListener typedListener = listener as ICactusGrammarListener;
			if (typedListener != null) typedListener.EnterFunc_dcl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICactusGrammarListener typedListener = listener as ICactusGrammarListener;
			if (typedListener != null) typedListener.ExitFunc_dcl(this);
		}
	}

	[RuleVersion(0)]
	public Func_dclContext func_dcl() {
		Func_dclContext _localctx = new Func_dclContext(Context, State);
		EnterRule(_localctx, 8, RULE_func_dcl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 73;
			func_header();
			State = 74;
			code_body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Field_dclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TYPE() { return GetToken(CactusGrammarParser.TYPE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(CactusGrammarParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SPRT() { return GetToken(CactusGrammarParser.SPRT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] TAG() { return GetTokens(CactusGrammarParser.TAG); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TAG(int i) {
			return GetToken(CactusGrammarParser.TAG, i);
		}
		public Field_dclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_field_dcl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICactusGrammarListener typedListener = listener as ICactusGrammarListener;
			if (typedListener != null) typedListener.EnterField_dcl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICactusGrammarListener typedListener = listener as ICactusGrammarListener;
			if (typedListener != null) typedListener.ExitField_dcl(this);
		}
	}

	[RuleVersion(0)]
	public Field_dclContext field_dcl() {
		Field_dclContext _localctx = new Field_dclContext(Context, State);
		EnterRule(_localctx, 10, RULE_field_dcl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 79;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==TAG) {
				{
				{
				State = 76;
				Match(TAG);
				}
				}
				State = 81;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 82;
			Match(TYPE);
			State = 83;
			Match(ID);
			State = 84;
			Match(SPRT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Struct_headerContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(CactusGrammarParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] TAG() { return GetTokens(CactusGrammarParser.TAG); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TAG(int i) {
			return GetToken(CactusGrammarParser.TAG, i);
		}
		public Struct_headerContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_struct_header; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICactusGrammarListener typedListener = listener as ICactusGrammarListener;
			if (typedListener != null) typedListener.EnterStruct_header(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICactusGrammarListener typedListener = listener as ICactusGrammarListener;
			if (typedListener != null) typedListener.ExitStruct_header(this);
		}
	}

	[RuleVersion(0)]
	public Struct_headerContext struct_header() {
		Struct_headerContext _localctx = new Struct_headerContext(Context, State);
		EnterRule(_localctx, 12, RULE_struct_header);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 89;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==TAG) {
				{
				{
				State = 86;
				Match(TAG);
				}
				}
				State = 91;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 92;
			Match(T__3);
			State = 93;
			Match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Struct_dclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Struct_headerContext struct_header() {
			return GetRuleContext<Struct_headerContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BODY_OPN() { return GetToken(CactusGrammarParser.BODY_OPN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BODY_CLS() { return GetToken(CactusGrammarParser.BODY_CLS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Func_dclContext[] func_dcl() {
			return GetRuleContexts<Func_dclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Func_dclContext func_dcl(int i) {
			return GetRuleContext<Func_dclContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Field_dclContext[] field_dcl() {
			return GetRuleContexts<Field_dclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Field_dclContext field_dcl(int i) {
			return GetRuleContext<Field_dclContext>(i);
		}
		public Struct_dclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_struct_dcl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICactusGrammarListener typedListener = listener as ICactusGrammarListener;
			if (typedListener != null) typedListener.EnterStruct_dcl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICactusGrammarListener typedListener = listener as ICactusGrammarListener;
			if (typedListener != null) typedListener.ExitStruct_dcl(this);
		}
	}

	[RuleVersion(0)]
	public Struct_dclContext struct_dcl() {
		Struct_dclContext _localctx = new Struct_dclContext(Context, State);
		EnterRule(_localctx, 14, RULE_struct_dcl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 95;
			struct_header();
			State = 96;
			Match(BODY_OPN);
			State = 101;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==TYPE || _la==TAG) {
				{
				State = 99;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
				case 1:
					{
					State = 97;
					func_dcl();
					}
					break;
				case 2:
					{
					State = 98;
					field_dcl();
					}
					break;
				}
				}
				State = 103;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 104;
			Match(BODY_CLS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Code_bodyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BODY_OPN() { return GetToken(CactusGrammarParser.BODY_OPN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BODY_CLS() { return GetToken(CactusGrammarParser.BODY_CLS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SPRT() { return GetTokens(CactusGrammarParser.SPRT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SPRT(int i) {
			return GetToken(CactusGrammarParser.SPRT, i);
		}
		public Code_bodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_code_body; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICactusGrammarListener typedListener = listener as ICactusGrammarListener;
			if (typedListener != null) typedListener.EnterCode_body(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICactusGrammarListener typedListener = listener as ICactusGrammarListener;
			if (typedListener != null) typedListener.ExitCode_body(this);
		}
	}

	[RuleVersion(0)]
	public Code_bodyContext code_body() {
		Code_bodyContext _localctx = new Code_bodyContext(Context, State);
		EnterRule(_localctx, 16, RULE_code_body);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106;
			Match(BODY_OPN);
			State = 112;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 32962L) != 0)) {
				{
				{
				State = 107;
				statement();
				State = 108;
				Match(SPRT);
				}
				}
				State = 114;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 115;
			Match(BODY_CLS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Var_dclContext var_dcl() {
			return GetRuleContext<Var_dclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AssignContext assign() {
			return GetRuleContext<AssignContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICactusGrammarListener typedListener = listener as ICactusGrammarListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICactusGrammarListener typedListener = listener as ICactusGrammarListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 18, RULE_statement);
		try {
			State = 120;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,10,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 117;
				var_dcl();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 118;
				assign();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 119;
				expression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
